--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -43,6 +43,7 @@ find_package(SuiteSparse REQUIRED)
 add_message_files(
   FILES
   BiasEstiInfo.msg
+  OptiFlow.msg
   FeatureMeasurement.msg
   CameraMeasurement.msg
   TrackingInfo.msg
